реализованы страницы входа и сброса пароля. добавлена рабочая вкладка настроек со сменой языка, темы программы и выхода из аккаунта

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleLocalizations</key>
 	<array>
 		<string>en</string>
-		<string>ru_RU</string>
+		<string>ru</string>
 	</array>
 	<key>CFBundleDisplayName</key>
 	<string>Task Flow</string>
