--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,11 @@ dependencies:
   firebase_auth: ^5.6.1
   firebase_database: ^11.3.8
   firebase_core: ^3.15.0
+  flutter_svg: ^2.2.0
+  google_fonts: ^6.2.1
+  lottie: ^3.3.1
+  provider: ^6.1.5
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +72,11 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/svg/man_with_clocks.svg
+    - assets/svg/team_working.svg
+    - assets/svg/to_do_check.svg
+    - assets/json/escaped_task.json
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
   # For details regarding adding assets from package dependencies, see
