--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,13 +40,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_auth: ^5.6.1
-  firebase_database: ^11.3.8
+  firebase_database: ^11.3.9
   firebase_core: ^3.15.0
   flutter_svg: ^2.2.0
   google_fonts: ^6.2.1
   lottie: ^3.3.1
   provider: ^6.1.5
   shared_preferences: ^2.5.3
+  encrypt: ^5.0.3
 
 dev_dependencies:
   flutter_test:
