--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   provider: ^6.1.5
   shared_preferences: ^2.5.3
   encrypt: ^5.0.3
+  multi_select_flutter: ^4.1.3
+  flutter_staggered_animations: ^1.1.1
 
 dev_dependencies:
   flutter_test:
