я еще никогда так ненавидела жизнь, как в эти моменты настройки уведомлений

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -17,6 +17,13 @@
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>FirebaseAppDelegateProxyEnabled</key>
+    <false/>
+    <key>UIBackgroundModes</key>
+    <array>
+        <string>fetch</string>
+        <string>remote-notification</string>
+    </array>
 	<key>CFBundleName</key>
 	<string>task_flow</string>
 	<key>CFBundlePackageType</key>
