--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,13 @@ dependencies:
   encrypt: ^5.0.3
   multi_select_flutter: ^4.1.3
   flutter_staggered_animations: ^1.1.1
+  flutter_local_notifications: ^19.3.0
+  firebase_messaging: ^15.2.9
+  cloud_firestore: ^5.6.11
+  timezone: ^0.10.1
+  location: ^8.0.1
+  intl: ^0.20.2
+  permission_handler: ^12.0.1
 
 dev_dependencies:
   flutter_test:
